remove the email verification
