# src/routes/auth.routes.js
@@ -7,9 +7,7 @@ import {
   logoutUser,
   refreshAccessToken,
   registerUser,
-  resendEmailVerification,
   resetForgotPassword,
-  verifyEmail,
 } from "../controllers/auth.controllers.js";
 import { validate } from "../middlewares/validator.middleware.js";
 import {
@@ -28,15 +26,13 @@ router.route("/register").post(userRegisterValidator(), validate, registerUser);
 
 router.route("/login").post(userLoginValidator(), validate, login);
 
-router.route("/verify-email/:verificationToken").get(verifyEmail);
-
 router.route("/refresh-token").post(refreshAccessToken);
 
 router
   .route("/forgot-password")
   .post(userForgotPasswordValidator(), validate, forgotPasswordRequest);
 
-  router
+router
   .route("/reset-password/:resetToken")
   .post(userResetForgotPasswordValidator(), validate, resetForgotPassword);
 
@@ -53,8 +49,5 @@ router
     validate,
     changeCurrentPassword,
   );
-router
-  .route("/resend-email-verification")
-  .post(verifyJWT, resendEmailVerification);
 
 export default router;
